tests/fixtures/valid/do_block.airl
;; EXPECT: 3
(do 1 2 3)
