tests/fixtures/type_errors/undefined_symbol.airl
;; ERROR: UndefinedSymbol
(undefined-fn 1 2)
